https: Replace the deprecated constructor when creating a URL from a String